# doc-test-template

./: .gitignore  CMakeLists.txt  LICENSE  README.md  class-diagram.uxf  csc232.cpp  csc232.h  demo.cpp  main.cpp  test_bootstrap.cpp  test_task1.cpp  test_task2.cpp  test_task3.cpp  test_task4.cpp  test_task5.cpp  testing.md
.github/workflows/: cmake.yml
